5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_869.log
== SUBMITION (2019-04-11 10:54:52) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
else:
	print(round(valor,2))
-- EXECUTION TIME:
0.125945
-- ERROR:
  File "/home/codebench/codes/1638/869/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:00) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
else:
	print(round(valor,2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:13) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
else :
	print(round(valor,2))
-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:05) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
else :
	print(round(valor,2));
-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:18) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
else:
	print(round(valor,2));
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:46) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2)
if(valor<200)
	print(round(valor,2));
-- ERROR:
File "XXXX", line 7
    print(round(valor,2));
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:05) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2))
if(valor<200)
	print(round(valor,2));
-- ERROR:
File "XXXX", line 6
    if(valor<200)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:22) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2))
if(valor<200):
	print(round(valor,2));
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:57:25) 
-- CODE:
valor=float(input())

if(valor>=200):
	a=(valor/100)*95;
	print(round(a,2))
if(valor<200):
	print(round(valor,2));
-- EXECUTION TIME:
0.21023
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
